[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menus/settings_menu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menus/settings_menu/HBoxContainer.gd" type="Script" id=2]

[node name="SettingsMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 353.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 626.0
margin_bottom = 22.0
text = "Settings"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 626.0
margin_bottom = 314.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 626.0
margin_bottom = 38.0
text = "MASTER_VOLUME"
align = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 626.0
margin_bottom = 58.0
min_value = -80.0
max_value = 6.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 626.0
margin_bottom = 66.0

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 626.0
margin_bottom = 92.0
text = "SFX_VOLUME"
align = 1

[node name="HSlider2" type="HSlider" parent="VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 626.0
margin_bottom = 112.0
min_value = -80.0
max_value = 6.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 626.0
margin_bottom = 120.0

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 626.0
margin_bottom = 146.0
text = "MUSIC_VOLUME"
align = 1

[node name="HSlider3" type="HSlider" parent="VBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 626.0
margin_bottom = 166.0
min_value = -80.0
max_value = 6.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 626.0
margin_bottom = 174.0

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 626.0
margin_bottom = 200.0
text = "CONTROLS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 626.0
margin_bottom = 232.0
alignment = 1
script = ExtResource( 2 )

[node name="Button1" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 261.0
margin_bottom = 28.0
text = "BY_TAP"

[node name="Button2" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 265.0
margin_right = 439.0
margin_bottom = 28.0
disabled = true
text = "VIRTUAL_GAMEPAD"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 626.0
margin_bottom = 240.0

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 236.0
margin_top = 244.0
margin_right = 390.0
margin_bottom = 272.0
size_flags_horizontal = 4
text = "RESET_PROGRESS"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 318.0
margin_right = 626.0
margin_bottom = 346.0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 255.0
margin_right = 311.0
margin_bottom = 28.0
text = "BACK"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 315.0
margin_right = 370.0
margin_bottom = 28.0
text = "SAVE"
